--- a/Cooking/package.json
+++ b/Cooking/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.2.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "firebase": "^10.11.0",
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-gesture-handler": "^2.16.0",
