--- a/Cooking/package.json
+++ b/Cooking/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^19.2.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
