--- a/Cooking/package.json
+++ b/Cooking/package.json
@@ -22,12 +22,14 @@
     "firebase": "^10.11.0",
     "react": "18.2.0",
     "react-native": "0.73.7",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-share": "^10.2.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
